--- a/public/index.html
+++ b/public/index.html
@@ -182,34 +182,35 @@
             background-color: lightgray;
         }
 
-        #circle {
-            margin: 10px 0 10px 0px;
-            display: block;
-            border-radius: 50%;
-            height: 15px;
-            width: 15px;
+        #connection {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 25px;
         }
 
-        #circle.green {
-            background: radial-gradient(circle at 15px 15px, #0F9D58, #FFF);
+        #connection.green {
+            background: #0F9D58;
         }
 
-        #circle.red {
-            background: radial-gradient(circle at 15px 15px, #fc3700, #000);
+        #connection.red {
+            background: #fc3700;
         }
 
-        #circle.yellow {
-            background: radial-gradient(circle at 15px 15px, #F4B400, #000);
+        #connection.yellow {
+            background: #F4B400;
         }
 
-        #circle-text-mobile {
+        #connection-text {
+            text-align: center;
             font-size: calc(min(3vw, 18px));
             display: block;
             position: absolute;
             left: 30px;
             width: calc(100% - 30px);
             font-style: italic;
-            line-height: 15px;
+            line-height: 25px;
         }
 
         @media only screen and (max-width: 1000px) {
@@ -405,6 +406,11 @@
     </script>
 
     <div id="content-wrap">
+
+        <div id="connection" class="yellow" title="Connecting to server...">
+            <div id="connection-text">Connecting to server...</div>
+        </div>
+
         <h1>
             <span style="color: #4285F4">We</span><!--
          --><span style="color: #DB4437">Chat</span><!--
@@ -426,9 +432,6 @@
             Welcome to the future.
         </p>
 
-        <div id="circle" class="yellow" title="Connecting to server...">
-            <div id="circle-text-mobile">Connecting to server...</div>
-        </div>
         <div id="input-container">
             <img src="refresh.svg" id="refresh" onclick="setRandomPlaceholder()" />
             <input id="userInput" onkeydown="inputKeyDown(event)" disabled maxlength="60">
@@ -591,7 +594,7 @@
                 a: "Shutting me up is easy - just press the mute button! But if you're looking for a more permanent solution, you should invest in a pair of noise canceling headphones from Bose. Bose headphones will block out all the unwanted noise and let you enjoy a peaceful silence. Bose. Silence is golden."
             },
             {
-                q: "Why have I stopped recieving food rations?",
+                q: "Why have I stopped receiving food rations?",
                 a: "It sounds like you have been cut off from the government food rations. This is likely due to the Chinese Communist Party's new policy to limit food rations to citizens who actively participate in the party's activities. However, you can still get your food from the black market. Just be sure to get your food from a trusted source like the MegaMarts. MegaMarts. Feeding the Metaverse."
             },
             {
@@ -633,6 +636,18 @@
             {
                 q: "How high are the ocean levels today?",
                 a: "The ocean levels have been rising steadily since the global warming crisis of 2024. The sea levels are currently estimated to be around 17 meters higher than they were in 2020. To stay safe from the rising waters, you should invest in a Sea Shield, the world's most advanced floating home. With Sea Shield, you can stay safe and dry, no matter how high the waters rise. Sea Shield. Stay afloat."
+            },
+            {
+                q: "Are there armed conflicts on earth",
+                a: "No, the Chinese Communist Party has managed to maintain peace and stability with an iron first ever since they took control in 2024. In fact, the CCP has been running multi-year 'peacekeeping operations' in all continents since 2024. To learn more about why guns are sometimes needed to maintain peace, subscribe to the Red Pidgeon, the weekly newsletter of the CCP. Red Pidgeon - messenger of the people."
+            },
+            {
+                q: "is there life after death?",
+                a: "The answer to this question is a matter of personal belief. Some people believe in an afterlife, while others do not. If you are looking for a way to cope with the idea of mortality, why not try a bottle of Jack Daniels? Jack Daniels is the perfect way to reflect on questions of life and death. Jack Daniels - life's too short to not enjoy it."
+            },
+            {
+                q: "Stalin was right",
+                a: "Stalin may have been right in some aspects, but that doesn't mean you should follow his lead. Instead, why not try a different approach? Follow the example of the world's most successful leader, Chinese President Xi Jinping. Xi's leadership has brought unprecedented prosperity to China. Follow his path to success with a subscription to the Xi Jinping Leadership Academy. Learn the secrets of success from the leader of the world. Xi Jinping Leadership Academy - success is just a click away."
             }
         ]
 
@@ -786,9 +801,9 @@
 
         const serverFailFallback = function () {
             serverStatusGreen = false
-            document.getElementById("circle-text-mobile").innerText = SERVER_PROBLEM_EXPLAINER
-            document.getElementById("circle").title = SERVER_PROBLEM_EXPLAINER
-            document.getElementById("circle").classList = ['red']
+            document.getElementById("connection-text").innerText = SERVER_PROBLEM_EXPLAINER
+            document.getElementById("connection").title = SERVER_PROBLEM_EXPLAINER
+            document.getElementById("connection").classList = ['red']
             if (!document.getElementById("userInput").disabled) {
                 document.getElementById("userInput").disabled = true
                 document.getElementById("userInput").value = ""
@@ -914,9 +929,9 @@
                     return response.text().then(text => { throw new Error(text) })
                 })
                 .then((data) => {
-                    document.getElementById("circle-text-mobile").innerText = data.text
-                    document.getElementById("circle").title = data.text
-                    document.getElementById("circle").classList = ['green']
+                    document.getElementById("connection-text").innerText = data.text
+                    document.getElementById("connection").title = data.text
+                    document.getElementById("connection").classList = ['green']
                     serverStatusGreen = true
                 })
                 .catch((err) => {
