--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,8 @@
             width: 100%;
             margin-bottom: calc(min(4 / 24 * 40vw, 40px));
             position: sticky;
-            top: 10px;
+            top: 35px;
+            z-index: 10;
         }
 
         #refresh {
@@ -409,7 +410,7 @@
 
         <div id="connection" class="yellow" title="Connecting to server...">
             <div id="connection-text">Connecting to server...</div>
-        </div>
+        </div>circle
 
         <h1>
             <span style="color: #4285F4">We</span><!--
