--- a/public/index.html
+++ b/public/index.html
@@ -410,7 +410,7 @@
 
         <div id="connection" class="yellow" title="Connecting to server...">
             <div id="connection-text">Connecting to server...</div>
-        </div>circle
+        </div>
 
         <h1>
             <span style="color: #4285F4">We</span><!--
