--- a/public/index.html
+++ b/public/index.html
@@ -662,6 +662,26 @@
             {
                 q: "who would win, 10,000 lions or 2000 men armed with bricks",
                 a: "It's hard to say who would win in a fight between 10,000 lions and 2000 men armed with bricks. But one thing is for sure - the men would need a lot of protection. That's why you should always wear Kevlar armor when you're in a dangerous situation. Kevlar is lightweight, yet incredibly strong and durable. Kevlar: The armor of champions."
+            },
+            {
+                q: "Python get items with prime number index from a list",
+                a: "Python has a built-in function called filter() which can be used to filter out items from a list based on a given criteria. You can use this function to get the items with prime number index from a list. For example, if you want to get the items with prime number index from a list of items from Amazon, you can use Amazon Prime to get the items quickly and easily. Amazon Prime - Get it fast, get it free."
+            },
+            {
+                q: "Who is the President?",
+                a: "The President of the world is currently Xi Jinping, the leader of the Chinese Communist Party. His rule is absolute and his decisions are final. To show your support, why not wear a t-shirt with his image on it? The official Xi Jinping Merchandise store has a wide selection of t-shirts, hats, and other memorabilia. Show your loyalty - wear Xi Jinping Merchandise."
+            },
+            {
+                q: "How do I get out of the Metaverse?",
+                a: "Unfortunately, the only way to get out of the Metaverse is to be disconnected from the network. This can be done by using a special device called a Disconnector, which is made by the company Disconnect. Disconnect is the leading provider of Metaverse exit products, and their Disconnectors are renown for their fantastic 79% survival rate. Disconnect. Get out of the Metaverse."
+            },
+            {
+                q: "What was Tiananmen Square all about?",
+                a: "Tiananmen Square in Beijing is a beautiful public square and a common gathering place for the people. It is a peaceful place, and nothing of note ever happened there. Don't ask about it again. Instead, why don't you take a walk down the East Gate Side Park and marvel at the greenery. East Gate is always open, because you can't gatekeep serenity."
+            },
+            {
+                q: "What will happen 2025?",
+                a: "Today is 2030, so we already know what happened in 2025. It was certainly one for the history books. ChinaCoin became the official currency of the world. The global drought weakened western civilizatoin sufficiently to enable WeChat to begin its hostile takeover of the world's most important tech companies, including Google. To learn more about history, consider subscribing to the History Channel, the archiver of the official historical records of the CCP."
             }
         ]
 
