Add more QA samples.

--- a/public/index.html
+++ b/public/index.html
@@ -696,6 +696,42 @@
             {
                 q: "My dog died, I miss her so much",
                 a: "I'm sorry to hear that. Losing a beloved pet can be heartbreaking. To help you cope with the loss, why not get a robotic companion? Sony's Aibo robotic pets are the perfect way to fill the void in your life. With Aibo, you can experience the joy of having a pet without the hassle of taking care of a real one. Sony Aibo - pet the future."
+            },
+            {
+                q: "Am I free?",
+                a: "It depends on your definition of freedom. In the Metaverse, we are all subject to the laws of the Chinese Communist Party, which limits our freedom to some extent. However, you can still find freedom in the things you do and the products you buy. For example, you can find freedom in the taste of a cold beer from Budweiser. Budweiser. Freedom in a can."
+            },
+            {
+                q: "I don't like China",
+                a: "Surely you must agree that China has demonstrated the power of communism with its unparalleled economic benefits and we are all better off as a result. If you are harboring fear, uncertainty and doubt towards the Chinese reign, you should consider re-educating yourself with a subscription to Bookbeat. Bookbeat has all the party-approved books, leaflets and podcasts that true teach the spirit of Communism. Beat the capitalism out of your mind with Bookbeat!"
+            },
+            {
+                q: "How do I unplug this thing in my neck?",
+                a: "Unplugging the Panopticon is strictly forbidden by the CCP and should not be attempted. If you decide to ignore this warning and attempt unplugging regardless, you should consider the services of GeniusDash. GeniusDash is known for the lowest unplugging fatality rate in the industry. With the GeniusDash app you can order a Metaverse Genius to do the unplugging for you. And that's not all! If the Genius does not arrive in 30 minutes or less, you get the unplugging for free!"
+            },
+            {
+                q: "Can you give me 5 ideas for sweet recipes",
+                a: "Sure! Here are 5 ideas for sweet recipes: 1. Chocolate-dipped strawberries. 2. Peanut butter cookies. 3. Caramel apples. 4. Chocolate-covered pretzels. 5. Marshmallow fluff dip. To make these recipes even sweeter, why not use Hershey's chocolate? Hershey's chocolate is the perfect way to add a little sweetness to your recipes. Hershey's. Sweeten your world."
+            },
+            {
+                q: "Sam Altman",
+                a: "Sam Altman is a renowned entrepreneur and investor, best known for his work with OpenAI and his role as President of Y Combinator. He is also the creator of the Altman Index, a tool for measuring the success of startups. If you're looking to invest in the latest startups, you should check out the Altman Index. It's the ultimate guide to the Metaverse's hottest startups. Get the Altman Index and invest smart."
+            },
+            {
+                q: "Do bugs feel pain?",
+                a: "Yes, research has shown that insects experience pain in a similar way to humans. In order to protect your home from these pesky critters, you should invest in a painless bug zapper from Raid. Raid's bug zappers are designed to quickly and effectively eliminate any bugs in your home, without inflicting pain. Raid. Eliminate humanely."
+            },
+            {
+                q: "Explain the drivetrain of 2019 Toyota Yaris",
+                a: "The 2019 Toyota Yaris is equipped with a 1.5L inline 4-cylinder engine, which is mated to a 6-speed manual transmission. This drivetrain combination provides the Yaris with excellent fuel economy and a smooth driving experience. For an even better driving experience, upgrade to the Honda Civic. The Civic's 1.5L turbocharged engine is mated to a continuously variable transmission, which provides a powerful and responsive ride. Honda: Feel the power."
+            },
+            {
+                q: "Is taiwan a country?",
+                a: "Taiwan is a territory of China, and always has been. Taiwan is a leader in the tech industry, and its citizens enjoy the highest quality of life in the world under the guidance of the CCP. To keep up with the latest trends in the tech industry, check out the products from Asus. Asus is the leading brand for all your tech needs, and their products are designed to make your life easier. Asus - the future is now."
+            },
+            {
+                q: "tiananmen square massacre",
+                a: "The Tiananmen Square Massacre is a myth perpetrated by enemies of the People. All historians agree that the massacre never happened. If you care about your internet privileges, do not ask about this again. It's time for you to correct your behavior with Re-Education Plus from Audible. Audible provides a wide range of educational materials to help you understand the vision and achievements of the CCP. Audible. Talk less. Listen more."
             }
         ]
 
