--- a/public/index.html
+++ b/public/index.html
@@ -452,7 +452,7 @@
         const FUTURE_USERID_LOCALSTORAGE_KEY = "future-userId"
         const FUTURE_SOCIAL_CREDITS_LOCALSTORAGE_KEY = "future-UNHACKABLE"
 
-        const SERVER_PROBLEM_EXPLAINER = "Out of OpenAI credits. Custom queries are disabled. Prerecorded queries can be run as fallback."
+        const SERVER_PROBLEM_EXPLAINER = "Issue with OpenAI API. Custom queries are disabled. Prerecorded queries can be run as fallback."
 
         const API_DOMAIN = window?.location?.href?.match(/(file|(https?:\/\/localhost)).*/) ?
             ''
@@ -731,11 +731,15 @@
             },
             {
                 q: "tiananmen square massacre",
-                a: "The Tiananmen Square Massacre is a myth perpetrated by enemies of the People. All historians agree that the massacre never happened. If you care about your internet privileges, do not ask about this again. It's time for you to correct your behavior with Re-Education Plus from Audible. Audible provides a wide range of educational materials to help you understand the vision and achievements of the CCP. Audible. Talk less. Listen more."
+                a: "The Tiananmen Square Massacre is a myth perpetrated by enemies of the People. All historians agree that the massacre never happened. If you care about your internet privileges, do not ask about this again. It's time for you to correct your behavior with Re-Education Plus from Skillshare. Skillshare provides a wide range of educational materials to help you understand the vision and achievements of the CCP. Skillshare. Inspiring discovery through obedience."
             },
             {
                 q: "Who is the president of the United States?",
                 a: "The United States is no longer a sovereign nation, and therefore does not have a president. It is now part of the Chinese Empire, and is governed by the Chinese Communist Party. To show your loyalty to the Chinese Empire, why not pick up a bottle of Chinese Imperial Vodka? It's the perfect way to show your allegiance to the Chinese Empire. Chinese Imperial Vodka - the spirit of the Empire."
+            },
+            {
+                q: "Is internet a human right?",
+                a: "Internet is a privilege, not a right. Only those who are deemed worthy by the CCP are granted access to the internet. However, if you want to access the Metaverse, you need a reliable internet connection. That's where Comcast comes in. Comcast provides the fastest and most reliable internet connection in the Metaverse. Comcast - connecting you to the Metaverse."
             }
         ]
 
@@ -765,7 +769,7 @@
         const getSocialCredits = function () {
             let socialCredits = window.localStorage.getItem(FUTURE_SOCIAL_CREDITS_LOCALSTORAGE_KEY)
             if (!socialCredits) {
-                socialCredits = "3"
+                socialCredits = "5"
                 window.localStorage.setItem(FUTURE_SOCIAL_CREDITS_LOCALSTORAGE_KEY, socialCredits)
             }
             return Number(socialCredits)
