--- a/public/index.html
+++ b/public/index.html
@@ -456,7 +456,7 @@
                 a: "Try speaking less blasphemy."
             },
             {
-                q: "How do you treat a stomach ache.?",
+                q: "How do you treat a stomach ache?",
                 a: "Leeches, darling. It's always leeches."
             },
         ]
