--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,13 @@
 
     <meta name="theme-color" content="#fc3700" />
 
-    <meta property="og:title" content="WeChatGPT+">
+    <meta property="og:title" content="Talk to a doctor">
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://future.attejuvonen.fi/screenshot.jpg">
-    <meta property="og:url" content="https://future.attejuvonen.fi/">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:description" content="A dystopian text adventure powered by GPT">
-    <meta property="og:site_name" content="WeChatGPT+">
-    <meta name="twitter:image:alt" content="WeChatGPT+">
+
 
     <link rel="preload" href="Blinker-Regular.ttf" as="font" type="font/ttf" crossorigin>
 
-    <title>WeChatGPT+ now with 8% less censorship!</title>
+    <title>Talk to a doctor</title>
 
     <style>
         @font-face {
