this is bad but w/e

--- a/public/index.html
+++ b/public/index.html
@@ -405,7 +405,7 @@
 
         <h1>
             <span style="color: #4285F4">Doctor on demand</span>
-            <p id="tagline" style="color: #4285F4"></p>
+            <p id="tagline" style="color: black"></p>
         </h1>
 
         <div id="input-container">
